# pseudo-double

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Functions.md  LICENSE  PseudoDouble.h  PseudoDouble.rs  PseudoDouble_iostream.h  PseudoDouble_speed_test.cpp  PseudoDouble_test.cpp  PseudoFloat.h  PseudoFloat_iostream.h  PseudoFloat_speed_test.cpp  PseudoFloat_test.cpp  README.md  SECURITY.md  pseudo_double.c  pseudo_double.cpp  pseudo_double.h  pseudo_float.c  pseudo_float.cpp  pseudo_float.h
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
pseudodouble_test/src/: main.rs  pseudo_double.rs
rust/pseudodouble/: Cargo.toml
rust/pseudodouble/src/: lib.rs
rust/pseudodouble/tests/: integration_test.rs
